--- a/app/src/main/res/layout/presetlistlayout.xml
+++ b/app/src/main/res/layout/presetlistlayout.xml
@@ -4,64 +4,60 @@
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    android:weightSum="4"
+    android:weightSum="6"
     android:background="@color/colorPrimary"
     android:id="@+id/presetLayout">
-
-    <TextView
-        android:id="@+id/txtUnitName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="start"
-        android:layout_weight="1"
-        android:textStyle="bold"
-        android:textAllCaps="true"
-        android:layout_marginTop="25dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-        android:textColor="#000000"
-        tools:text="1" />
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:weightSum="3"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
         android:background="@color/black"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingStart="10dp"
+        android:paddingTop="10dp"
+        android:paddingEnd="10dp"
+        android:paddingBottom="10dp"
+        android:weightSum="3.0">
+
+        <TextView
+            android:id="@+id/txtUnitName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:layout_weight="0.5"
+            android:textAllCaps="true"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+            android:textColor="#FFFFFF"
+            android:textStyle="bold"
+            tools:text="1" />
 
         <TextView
             android:layout_width="45dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:text="Service"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
-            android:textStyle="bold"
             android:textColor="@color/white"
-            android:text="Service"/>
+            android:textStyle="bold" />
 
         <TextView
             android:layout_width="15dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textStyle="bold"
-            android:textColor="@color/white"
+            android:text="Price"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
-            android:text="Price"/>
+            android:textColor="@color/white"
+            android:textStyle="bold" />
 
         <TextView
             android:layout_width="10dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textStyle="bold"
-            android:textColor="@color/white"
+            android:text="Pulse"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
-            android:text="Pulse"/>
+            android:textColor="@color/white"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
