--- a/app/src/main/res/layout/view_reports.xml
+++ b/app/src/main/res/layout/view_reports.xml
@@ -69,12 +69,35 @@
         <TextView
             android:layout_width="45dp"
             android:layout_height="wrap_content"
-            android:layout_weight="4"
+            android:layout_weight="1"
+            android:text="Station"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
-            android:textStyle="bold"
             android:textColor="@color/white"
-            android:gravity="center_horizontal"
-            android:text="File Name"/>
+            android:textStyle="bold" />
+        <TextView
+            android:layout_width="45dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Service"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
+            android:textColor="@color/white"
+            android:textStyle="bold" />
+        <TextView
+            android:layout_width="45dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Value"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
+            android:textColor="@color/white"
+            android:textStyle="bold" />
+        <TextView
+            android:layout_width="45dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Total"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
+            android:textColor="@color/white"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
