--- a/app/src/main/res/layout/listcontrollayout.xml
+++ b/app/src/main/res/layout/listcontrollayout.xml
@@ -25,7 +25,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="60dp"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
                 android:padding="10dp"
@@ -36,11 +36,11 @@
                 android:text="Stacked 1"/>
 
             <com.google.android.material.button.MaterialButton
-                android:layout_width="wrap_content"
+                android:layout_width="40dp"
                 android:layout_height="wrap_content"
                 app:backgroundTint="#000"
                 android:text="Command"
-                app:rippleColor="@color/black"
+                app:rippleColor="@color/white"
                 android:layout_gravity="center"
                 style="@style/Widget.MaterialComponents.Button.TextButton"
                 android:layout_margin="10dp"
@@ -48,6 +48,7 @@
                 android:textColor="@color/white"
                 android:layout_weight=".5"
                 />
+
         </LinearLayout>
 
     </com.google.android.material.card.MaterialCardView>
