--- a/app/src/main/res/layout/listlayout.xml
+++ b/app/src/main/res/layout/listlayout.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:background="@color/colorPrimary"
-    android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimaryDark"
+
         android:weightSum="4"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
@@ -21,9 +20,9 @@
             android:layout_width="45dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:id="@+id/timeList"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
-            android:textStyle="bold"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:text="Time"/>
 
         <TextView
@@ -31,36 +30,29 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
-            android:textStyle="bold"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
+            android:id="@+id/stationList"
             android:text="Station"/>
 
         <TextView
             android:layout_width="15dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textStyle="bold"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
+            android:id="@+id/typeList"
             android:text="Type"/>
 
         <TextView
             android:layout_width="15dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textStyle="bold"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
+            android:id="@+id/serviceList"
             android:text="Service"/>
 
     </LinearLayout>
 
-
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/listView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="visible" />
 
 </LinearLayout>
