--- a/app/src/main/res/layout/views_profile.xml
+++ b/app/src/main/res/layout/views_profile.xml
@@ -115,21 +115,21 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10dp"
-            android:visibility="gone"
+            android:visibility="visible"
             android:layout_marginBottom="15dp"
             android:orientation="horizontal">
 
 
             <TextView
-                android:paddingTop="18dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_toStartOf="@id/editLogo"
                 android:textStyle="bold"
-                android:layout_centerVertical="true"
+                android:layout_marginTop="7dp"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="18sp"
+                android:paddingTop="10dp"
                 android:text="@string/change_logo"/>
 
             <com.google.android.material.button.MaterialButton
@@ -152,6 +152,21 @@
                 android:layout_alignBottom="@id/editLogo"
                 android:background="#808080" />
 
+            <LinearLayout
+                android:id="@+id/logoLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/view3"
+                android:weightSum="2"
+                android:layout_marginTop="20dp"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/logo"/>
+
+            </LinearLayout>
 
         </RelativeLayout>
 
