--- a/app/src/main/res/layout/views_summary.xml
+++ b/app/src/main/res/layout/views_summary.xml
@@ -21,6 +21,7 @@
             app:icon="@drawable/ic_send"
             android:text="Send Report"
             style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
+            android:id="@+id/send"
             android:textColor="@color/white"
             android:layout_marginEnd="11dp" />
 
@@ -38,31 +39,11 @@
     </LinearLayout>
 
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-         <LinearLayout
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:orientation="horizontal"/>
-
-        </LinearLayout>
-
-    </ScrollView>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:choiceMode="singleChoice"
-        android:background="@android:color/white"
-        android:visibility="gone"
-        android:listSelector="@android:color/darker_gray" />
+        android:visibility="visible" />
 
 </LinearLayout>
