--- a/app/src/main/res/layout/childwashlistlayout.xml
+++ b/app/src/main/res/layout/childwashlistlayout.xml
@@ -23,5 +23,8 @@
             android:paddingBottom="5dp"
             />
     </LinearLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"></androidx.recyclerview.widget.RecyclerView>
 
 </LinearLayout>
