--- a/app/src/main/res/layout/childstationdrylayout.xml
+++ b/app/src/main/res/layout/childstationdrylayout.xml
@@ -13,8 +13,7 @@
             android:id="@+id/serName"
             android:layout_height="wrap_content"
             android:text="Service"
-            android:textColor="@color/white"
-            android:background="@color/black"
+            android:textColor="@color/black"
             android:textStyle="bold"
             android:layout_weight="1"
             android:paddingEnd="5dp"
@@ -23,8 +22,5 @@
             android:paddingBottom="5dp"
             />
     </LinearLayout>
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"></androidx.recyclerview.widget.RecyclerView>
 
 </LinearLayout>
